--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,16 +26,19 @@
             <img class="image" src="../static/img/2650452.jpg" alt="">
         </div>
     </div>
-    <h6 style="text-align: center; font-size: 30px; font-family: 'Libre Franklin', sans-serif;">The technique is popular, perhaps because it’s portable and easy to
+    <h6 style="text-align: center; font-size: 30px; font-family: 'Libre Franklin', sans-serif;">The technique is
+        popular, perhaps because it’s portable and easy to
         learn.</h6>
     <div class="row">
         <ul class="pom">
             <li style="font-family: 'Libre Franklin', sans-serif;">Pick one project or task you want to focus on.</li>
             <li style="font-family: 'Libre Franklin', sans-serif;">Set a timer for 25-30 minutes, and get to work.</li>
-            <li style="font-family: 'Libre Franklin', sans-serif;">When the buzzer sounds, take a two-to-three-minute break.</li>
+            <li style="font-family: 'Libre Franklin', sans-serif;">When the buzzer sounds, take a two-to-three-minute
+                break.</li>
             <li style="font-family: 'Libre Franklin', sans-serif;">Repeat.</li>
             <li style="font-family: 'Libre Franklin', sans-serif;">After four sessions, take a longer break.</li>
-            <li style="font-family: 'Libre Franklin', sans-serif;">Record each session with a tick or X in your notebook</li>
+            <li style="font-family: 'Libre Franklin', sans-serif;">Record each session with a tick or X in your notebook
+            </li>
         </ul>
     </div>
 </div>
