--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,5 +1,7 @@
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Arvo:wght@700&display=swap" rel="stylesheet">
 <nav class="navbar navbar-expand-lg navbar-custom">
-    <a class="navbar-brand" style="color: black;" href="#">Navbar</a>
+    <a class="navbar-brand" style="color: black;font-family: 'Arvo', serif;" href="#">POMODORO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
