--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -10,7 +10,7 @@
         <div class="navbar-nav">
             <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
             <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#timer">Timer</a>
         </div>
     </div>
 </nav>
